resources are loaded when start is pressed

--- a/SGMCI_MTWD/nbproject/project.properties
+++ b/SGMCI_MTWD/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.jar=${dist.dir}/SGMCI_MTWD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.SGMCI_MTWD-lib=lib
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MT4J 0.95.classpath}
+    ${libs.MT4J 0.95.classpath}:\
+    ${file.reference.SGMCI_MTWD-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
