--- a/SGMCI_MTWD/.classpath
+++ b/SGMCI_MTWD/.classpath
@@ -51,5 +51,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/mri.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mt4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/muito_blobtracking.jar"/>
+	<classpathentry kind="lib" path="lib/mt4j-desktop.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
