--- a/SGMCI_MTWD/nbproject/project.properties
+++ b/SGMCI_MTWD/nbproject/project.properties
@@ -34,6 +34,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MT4J 0.95.classpath}:\
+    ${libs.MT4J Desktop.classpath}:\
     ${file.reference.SGMCI_MTWD-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
