--- a/SGMCI_MTWD/nbproject/project.properties
+++ b/SGMCI_MTWD/nbproject/project.properties
@@ -33,8 +33,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MT4J 0.95.classpath}:\
-    ${libs.MT4J Desktop.classpath}:\
+    ${libs.MT4j 0.98.classpath}:\
     ${file.reference.SGMCI_MTWD-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
