--- a/SGMCI_MTWD/.classpath
+++ b/SGMCI_MTWD/.classpath
@@ -49,8 +49,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/core.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/GlulogicMT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mri.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mt4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/muito_blobtracking.jar"/>
 	<classpathentry kind="lib" path="lib/mt4j-desktop.jar"/>
+	<classpathentry kind="lib" path="lib/tuio/tuio4j.jar"/>
+	<classpathentry kind="lib" path="lib/tuio/tuio4jinput.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
